magic-cluster/apps/dashboard/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dashboard
  labels:
    gateway.magicstick.dev/route-access: "true"
