magic-cluster/apps/dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-appliance-dashboard
  namespace: dashboard
  labels:
    app: ai-appliance-dashboard
spec:
  selector:
    app: ai-appliance-dashboard
  ports:
    - name: http
      port: 80
      targetPort: http
